[gd_scene load_steps=6 format=2]

[ext_resource path="res://textures/pixelated_halo_mask.png" type="Texture" id=1]
[ext_resource path="res://player/player.gd" type="Script" id=2]
[ext_resource path="res://textures/blank.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9, 9 )

[node name="player" type="KinematicBody2D"]
position = Vector2( -276.655, -330.472 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.6, 0.6 )
smoothing_enabled = true

[node name="Light2D" type="Light2D" parent="."]
scale = Vector2( 5, 5 )
texture = ExtResource( 1 )
color = Color( 0.780392, 0.596078, 0.596078, 1 )
shadow_enabled = true

[node name="bullet_container" type="Node" parent="."]

[node name="bullet_cooldown" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
